# Store-Management-FastAPI

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2b99840d878e_dummy_data.py  498a1b129d34_payment_options_table_added.py
src/: app.py  settings.py
src/data_model/: enums.py  interface.py  models.py
src/models/: categories.py  inventory.py  products.py  sales.py
src/routers/: categories.py  inventory.py  main.py  products.py  sales.py
